2008-05-02  Callum McKenzie  <callum@spooky-possum.org>

	* docs/C/invest-applet.xml: 
	* docs/C/legal.xml:
	* docs/invest-applet.omf.in:
	* docs/Makefile.am:
	* Makefile.am: Add documentation for the invest applet. Courtesy
	of Terry (see bug #504591). Updates to reflect recent UI changes
	where added by myself. Build integration done by Kjartan Maraas.

2008-04-21  Callum McKenzie  <callum@spooky-possum.org>

	* invest/about.py: 
	* invest/chart.py:
	* invest/applet.py:
	* data/art/Makefile.am:
	* data/Invest_applet.server.in.in:
	* data/art/*.png:
	* data/art/*.svg: Another update from Matteo Zandi. Move the
	indicator into the main icon. It also makes the icon naming slightly
	closer to that used for the icon themes (those aren't supported
	yet). See bug #526004.

2008-04-15  Callum McKenzie  <callum@spooky-possum.org>

	* invest/applet.py: 
	* invest/quotes.py: A patch from Matteo Zandi to restore the idea
	of a visible indicator of your stocks overall health. See bug
	#526004.

2008-04-03  Callum McKenzie  <callum@spooky-possum.org>

	* invest/__init__.py
	* invest/quotes.py
	* invest/chart.py
	* invest/preferences.py
	* invest/applet.py
	* invest/widgets.py
	* data/financialchart.ui
	* data/prefs-dialog.ui: Another big UI change from Matteo
	Zandi. Add spark-lines to the display. Change the graph url to use
	the european yahoo server since it gives better coverage (US and
	Euro). Show the headers only if there is anything in that column
	to show. Simplified the QuoteUpdater class. Path fixes in
	__init__.py.

2008-03-31  Callum McKenzie  <callum@spooky-possum.org>

	* invest/widgets.py: i18n fixes.

	* invest/applet.py
	* invset/widgets.py: Significant UI changes from Matteo
	Zandi. Clicking on the icon produces a dock window like the clock
	applet. The confusing (and not-always-working) colour-patch to
	indicate whether the stocks have gone up or down has been
	removed. Better column alignment and a monospace font. Column
	headers.
