@@ -147,7 +147,7 @@
             </listitem>
             <listitem>
               <para>
-                The recent change in the stock price
+                The change in the stock price over the last day.
               </para>
             </listitem>
             <listitem>
