@@ -1,3 +1,11 @@
+2008-05-03  Callum McKenzie  <callum@spooky-possum.org>
+
+	* invest/chart.py:
+	* invest/__init__.py:
+	* invest/quotes.py:
+	* invest/widgets.py: Patch from Matteo Zandi - make the change
+	percentage an actual percentage. Many other minor internal fixes.
+
 2008-05-02  Callum McKenzie  <callum@spooky-possum.org>
 
 	* docs/C/invest-applet.xml: 
